# GoITeensCertificateBot

./: .env.dist  .gitignore  Makefile  README.md  main.py  pyproject.toml  users.db
barelimg/: Cargo.toml  barelimg.pyi  pyproject.toml
barelimg/src/: lib.rs
certificates_bot/: __main__.py  bot.py
certificates_bot/fsm/: __init__.py
certificates_bot/handlers/: create.py
certificates_bot/logger/: __init__.py
certificates_bot/messages/: __init__.py
certificates_bot/utils/: generate_certificate.py
messages/: uk.json
