[package]
name = "barelimg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "barelimg"
crate-type = ["cdylib"]

[dependencies]
image = "0.24.6"
imageproc = "0.23.0"
lazy_static = "1.4.0"
pyo3 = "0.19.0"
rusttype = "0.9.3"
